# graphana_examples

./: README.md  pyproject.toml
django_graphana_setup/: dockerfile_dj  dockerfile_prometheus  prometheus.yml
django_graphana_setup/dummy/: manage.py
django_graphana_setup/dummy/dummy/: asgi.py  settings.py  urls.py
django_otel_setup/: dj_dockerfile  docker-compose.yml  otel-collector-config.yml  prometheus.yml  requirements.txt  sidedoc.yaml
django_otel_setup/dummy/dummy/: wsgi.py
django_otel_setup/dummy/notes/: views.py
python_graphana_setup/: dockerfile_app  requirements.txt  source_app.py
