[tool.poetry]
name = "graphana-learn"
version = "0.1.0"
description = "learning graphana"
authors = ["Pedro Rivera <pedro.rivera@globant.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.0"
django = "^5.0.1"
daphne = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
